<resources>
    <string name="app_name">Eventor</string>
    <string name="title_activity_login">Eventor</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">"First Name"</string>
    <string name="last_name">"Last Name"</string>
    <string name="phone">"Phone"</string>
    <string name="password">"password"</string>
    <string name="repassword">"Re-enter password"</string>
    <string name="RB_male">"Male"</string>
    <string name="RB_female">"Female"</string>
    <string name="btn_recovery">"send recovery E-mail"</string>
    <string name="tv_gender">"Gender"</string>
    <string name="btn_birthdate">"Select BirthDate"</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="upload_image">Upload Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="dd_mm_yyyy">DD- MM - YYYY</string>
    <string name="event_date">Event Date</string>
    <string name="inviter_name">Inviter Name</string>
    <string name="invitername">InviterName</string>
    <string name="description">description</string>
    <string name="hh_mm">HH : MM</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="Upload_Image2">Upload_Image2</string>
    <string name="Upload_Image1">Upload_Image1</string>
    <string name="your_image">Your Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="app_logo" translatable="false">App logo</string>
    <string name="birthdayformat">DD/MM/YYYY</string>
    <string name="home_icons">Home Icons</string>
    <string name="your_name">Your Name</string>
    <string name="friends">Friends</string>
    <string name="my_events">My Events</string>
    <string name="birthday">Birthday</string>
    <string name="wedding">Wedding</string>
    <string name="events_image">events_image</string>
    <string name="first_inviter">First Inviter</string>
    <string name="second_inviter">Second Inviter</string>
    <string name="image">Image</string>
    <string name="template">Template</string>
    <string name="video">Video</string>
    <string name="in_which_way">In which way ?</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDFvl841yeBO24kci1qj-ABXBtiG5TxbbU</string>
    <string name="save">Save</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="record">record</string>
    <string name="todo">TODO</string>
    <string name="option_2_from_maps_click_on_the_picture_below">- Option 2: from maps click on the picture below</string>
    <string name="option_1_available_on_time_and_date_you_have_chosen">- Option 1: Available on time and date you have chosen</string>
    <string name="accept">Accept</string>
    <string name="location">Location</string>
    <string name="maybe">Maybe</string>
    <string name="not_going">Not Going</string>
    <string name="reject">Reject</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="add_friend">Add Friend</string>

    <string name="facebook_app_id">154741595960895</string>
    <string name="fb_login_protocol_scheme">fb154741595960895</string>
    <string name="rejcet">Rejcet</string>
    <string name="edit">Edit</string>
    <string name="write_a_message">Write Message</string>
    <string name="placeholder_message">My Message</string>
    <string name="how_are_you_doing_this_is_a_long_message_that_should_probably_wrap">Their Message</string>
    <string name="rose">Their Name</string>
    <string name="chat">Chat</string>
    <string name="accepted">Accepted</string>
    <string name="total_invitee">Total Invitee</string>
    <string name="rejected">Rejected</string>
    <string name="required">Required</string>
    <string name="uplaod_image">upload image</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Create_Event">Create Event</string>
    <string name="BirthDate">BirthDate</string>
    <string name="Graduation">Graduation</string>
    <string name="Engagement">Engagement</string>
    <string name="confrim">confrim</string>
    <string name="set_moderator">set moderator</string>
    <string name="cancel">cancel</string>
    <string name="invitee_number">invitee number</string>
    <string name="logout">Logout</string>
    <string name="unfriend">unfriend</string>
    <string name="friend_name">Friend Name</string>
    <string name="send_friend_request">send friend request</string>
    <string name="cancel_friend_request">cancel friend request</string>
    <string name="status">status</string>
    <string name="link_to_your_event">Link To Your Event</string>
    <string name="accept_n_invitation">accept\n invitation</string>
    <string name="maybe_n">maybe \n</string>
    <string name="reject_n_invitaion">reject\n invitaion</string>
    <string name="your_qr_attendance_n_show_it_to_inviter">Your QR Attendance\n Show It To Inviter</string>
    <string name="notification">notification</string>
    <string name="invite_friends">invite friends</string>
    <string name="invited_friend_s">invited friend\'s</string>
    <string name="check_attendance_n_using_qr">check_attendance using_qr</string>
    <string name="select_events_to_link_video">Select Events To Link Video</string>
    <string name="enter_address_city_or_zip_code">enter address city or zip code</string>
    <string name="enter_name_to_search">enter name to search</string>
    <string name="choose_your_hall_place_n_with_one_of_the_following_options">choose your hall place\n with one of the following options</string>
    <string name="click_to_upload_event_cover">click to upload event cover</string>
    <string name="invitation_video">Invitation Video</string>

    <string name="title_activity_fullscreen_video">FullscreenVideo</string>
    <string name="Notification">Notification</string>
    <string name="Events_List">Events List</string>
    <string name="Find_Friend">Find Friend</string>
    <string name="Help">Help</string>


    <string name="et_capacity">"Capacity"</string>
    <string name="et_noEnvitee">"number of invitee"</string>
    <string name="et_hallno">"halls ID"</string>
    <string name="et_availabledate">"Available date for reservation halls after"</string>
    <string name="et_availabletime">"Available time for reservation halls after"</string>

    <string name="et_userName">"User Name of admin"</string>
    <string name="et_adminID">"Admin ID"</string>
    <string name="et_emaill">"Email of admin"</string>
    <string name="et_passwordd">"Passwordd"</string>
    <string name="et_telephone">"Telephone"</string>
    <string name="events_invited_to">Events Invited To</string>
    <string name="how_to_add_video_to_event">How To Add Video To Event?</string>


</resources>
