<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Invitation">

    <LinearLayout
        android:id="@+id/conntainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_Finviter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/invitername"
                android:inputType="textPersonName"

                />

            <ImageView
                android:id="@+id/imgview_Finviter"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/Upload_Image1"
                android:src="@mipmap/ic_launcher"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_Sinviter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inviter_name"
                android:inputType="textPersonName"
                />

            <ImageView
                android:id="@+id/imgview_Sinviter"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/Upload_Image2"
                android:src="@mipmap/ic_launcher"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_eventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/event_date" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:hint="@string/dd_mm_yyyy"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_startTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:text="@string/start_time"
                />

            <Button
                android:id="@+id/btn_endTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_time"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_startTime"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hh_mm"
                />

            <TextView
                android:id="@+id/tv_endTime"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:hint="@string/hh_mm"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName" />

    </LinearLayout>
</LinearLayout>