<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
>

    <ImageView
        android:id="@+id/IV_events"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/events_image" />

    <TextView
        android:id="@+id/tv_eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/wedding"
        android:textSize="25sp"

        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/rb_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/image"
            android:textSize="20sp"
            tools:text="Image" />

        <RadioButton
            android:id="@+id/rb_template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/template"
            android:textSize="20sp"
            tools:text="Template" />


    </RadioGroup>


</LinearLayout>



</androidx.cardview.widget.CardView>