<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitephonebackground"
    android:padding="10dp"
     tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="10dp"


        android:cropToPadding="true"
        app:srcCompat="@drawable/loginpic"
        ></ImageView>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/roundedbutton"
    android:orientation="vertical">
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/roundedbutton"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/roundedbutton"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <CheckBox
            android:id="@+id/cb_rememberme"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/roundedbutton"
            android:padding="10dp"
            android:text="Remember Me "
            android:layout_marginRight="14dp"
            />

        <TextView
            android:id="@+id/tv_forgetPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/roundedbutton"
            android:padding="10dp"

            android:text="Forget Password?"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:translationZ="10dp"
        android:visibility="gone"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/roundedbutton"
        android:enabled="false"
        android:text="@string/action_sign_in"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/action_sign_up"
       />


</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>